# canvas

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: Fixedsys.bff  Fixedsys.cpp  Font.cpp  tobinary.py
cmake/: freetype2.cmake  glad.cmake  glew.cmake  glfw.cmake  libpng.cmake  nucleus.cmake  sfml.cmake  zlib.cmake
examples/: CMakeLists.txt
examples/01-triangle/: CMakeLists.txt
examples/01-triangle/src/: 01-triangle.cpp
examples/02-cube/: CMakeLists.txt
examples/02-cube/src/: 02-cube.cpp
examples/02-indices/: CMakeLists.txt
examples/02-indices/src/: 02-indices.cpp
examples/CanvasMatrices/: CMakeLists.txt
examples/CanvasMatrices/src/: canvas_matrices.cpp
examples/CanvasMinimal/: CMakeLists.txt  canvas_minimal.cpp  default.vs
examples/Minimal/: CMakeLists.txt  Minimal.cpp  default.vs
examples/minimal/: CMakeLists.txt  default.fs  default.vs  minimal.cpp
examples/ortho/: CMakeLists.txt  ortho.cpp
examples/rendering/: CMakeLists.txt  rendering.cpp
examples/rendering/res/shaders/: default.frag.glsl  default.vert.glsl
examples/text/: CMakeLists.txt  Text.cpp  text.cpp
include/canvas/: App.h  OpenGL.h  app.h  opengl.h
include/canvas/Debug/: DebugFont.h  DebugInterface.h  ProfilePrinter.h
include/canvas/Geometry/: Plane.h
include/canvas/Math/: Angle.h  Common.h  Intersection.h  Mat3.h  Mat4.h  Plane.h  Quaternion.h  Ray.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
include/canvas/Primitives/: Sprite.h  Text.h
include/canvas/Renderer/: BufferDefinition.h  Command.h  Encoder.h  GeometryDefinition.h  ImmediateRenderer.h  LineRenderer.h  RenderCommand.h  RenderContext.h  RenderGroup.h  Renderer.h  Types.h  UniformBuffer.h  VertexDefinition.h  immediate_mesh.h  pipeline.h  pipeline_builder.h  render_state.h  texture_slots.h
include/canvas/Rendering/: Canvas.h  Command.h  Font.h  Geometry.h  Program.h  Shader.h  Texture.h  Vertex.h  VertexBufferObject.h
include/canvas/Resources/: Resource.h  ResourceCache.h  ResourceManager.h  TextureResource.h
include/canvas/StaticData/: All.h
include/canvas/Utils/: Color.h  GLCheck.h  Geometry.h  Image.h  ImmediateShapes.h  Pos.h  Rect.h  ScopedOpenGLEnable.h  ShaderSource.h  Size.h
include/canvas/Windows/: Event.h  KeyboardEventHandlerInterface.h  MouseEventHandlerInterface.h  Window.h  WindowDelegate.h  keyboard_event_handler_interface.h  mouse_event_handler_interface.h
include/canvas/Windows/MessageLoop/: MessagePumpUI.h  MessageWindow.h
include/canvas/debug/: debug_font.h  debug_interface.h  profile_printer.h
include/canvas/math/: mat4.h  transform.h  vec2.h  vec3.h  vec4.h
include/canvas/message_loop/: message_pump_ui.h
include/canvas/renderer/: command.h  immediate_mesh.h  immediate_renderer.h  line_renderer.h  pipeline.h  pipeline_builder.h  render_state.h  renderer.h  texture_slots.h  types.h  uniform_buffer.h  vertex_definition.h
include/canvas/rendering/: Command.h  canvas.h  font.h  geometry.h  program.h  render_queue.h  renderer.h  shader.h  sprite.h  text.h  texture.h  vertex.h  vertex_buffer_object.h
include/canvas/static_data/: all.h
include/canvas/utils/: ScopedOpenGLEnable.h  color.h  geometry.h  gl_check.h  image.h  immediate_shapes.h  pos.h  rect.h  shader_source.h  size.h
include/canvas/windows/: KeyboardEventHandlerInterface.h  MouseEventHandlerInterface.h  context_settings.h  event.h  keyboard.h  keyboard_event_handler_interface.h  keyboard_event_receiver.h  mouse_event_handler_interface.h  mouse_event_receiver.h  video_mode.h  window.h  window_delegate.h  window_detail.h  window_handle.h  window_style.h
include/canvas/windows/win/: window_detail_win.h
src/: App.cpp  app.cpp
src/Debug/: DebugFont.cpp  DebugInterface.cpp  ProfilePrinter.cpp
src/Math/: Angle.cpp  Mat3.cpp  Mat4.cpp  Quaternion.cpp  Transform.cpp  Vec2.cpp  Vec3.cpp
src/Primitives/: Sprite.cpp  Text.cpp
src/Renderer/: BufferDefinition.cpp  Encoder.cpp  GeometryDefinition.cpp  ImmediateRenderer.cpp  LineRenderer.cpp  RenderContext.cpp  RenderGroup.cpp  Renderer.cpp  UniformBuffer.cpp  VertexDefinition.cpp  immediate_mesh.cpp  pipeline.cpp  pipeline_builder.cpp  texture_slots.cpp
src/Rendering/: Canvas.cpp  Command.cpp  Font.cpp  Geometry.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexBufferObject.cpp
src/Resources/: ResourceCache.cpp  ResourceManager.cpp  TextureResource.cpp
src/StaticData/: MonoFont.cpp
src/Utils/: Color.cpp  GLCheck.cpp  Geometry.cpp  Image.cpp  ImmediateShapes.cpp  ShaderSource.cpp
src/Windows/: Window.cpp  WindowDelegate.cpp
src/Windows/MessageLoop/: MessagePumpUI.cpp  MessageWindow.cpp
src/debug/: debug_font.cpp  debug_interface.cpp  profile_printer.cpp
src/glad/: glad.c
src/glad/glad/: glad.h
src/math/: mat4.cpp  vec4.cpp
src/message_loop/: message_pump_ui.cpp
src/renderer/: immediate_mesh.cpp  immediate_renderer.cpp  line_renderer.cpp  pipeline.cpp  pipeline_builder.cpp  renderer.cpp  texture_slots.cpp  uniform_buffer.cpp  vertex_definition.cpp
src/rendering/: Command.cpp  canvas.cpp  font.cpp  geometry.cpp  program.cpp  renderer.cpp  shader.cpp  sprite.cpp  text.cpp  texture.cpp  vertex_buffer_object.cpp
src/static_data/: MonoFont.cpp
src/utils/: color.cpp  geometry.cpp  gl_check.cpp  image.cpp  immediate_shapes.cpp  shader_source.cpp
src/windows/: video_mode.cpp  window.cpp  window_delegate.cpp  window_detail.cpp  window_win.cpp
src/windows/win/: video_mode_win.cpp  window_detail_win.cpp
tests/: CMakeLists.txt
tests/Math/: Mat4Tests.cpp  TransformTests.cpp  Vec2Tests.cpp  Vec3Tests.cpp  Vec4Tests.cpp
tests/Renderer/: VertexDefinitionTests.cpp  vertex_definition_tests.cpp
tests/Rendering/: FontTests.cpp
tests/Resources/: ResourceCacheTests.cpp  ResourceManagerTests.cpp  ResourceTests.cpp
tests/Windows/MessageLoop/: MessagePumpUITests.cpp
tests/math/: TransformTests.cpp  mat4_tests.cpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp
tests/rendering/: font_tests.cpp
